# HTCPCP

./: .codeclimate.yml  .gitlab-ci.yml  .travis.yml  HTCPCP.cabal  LICENSE  README.md
Network/HTCPCP/: Base.hs  Headers.hs  Methods.hs  Pot.hs  Request.hs  Returns.hs  URI.hs
test/Network/HTCPCP/: HTCPCPSpec.hs  PotSpec.hs
