name:                htcpcp
version:             0.1.0.0
synopsis:            Implementation of HTCPCP for Haskell
license-file:        LICENSE
author:              rudes
maintainer:          jacobriddle94@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: .
  exposed-modules: Network.HTCPCP.Pot
  build-depends:
    base >=4.6 && <4.7,
    network-uri
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.6,
      network-uri,
      hspec >=2.2.3,
      htcpcp
