name:                htcpcp
version:             0.1.0.0
synopsis:            Implementation of HTCPCP for Haskell
license-file:        LICENSE
author:              rudes
maintainer:          jacobriddle94@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.24

library
  hs-source-dirs: .
  exposed-modules: Network.HTCPCP.Pot
  build-depends:
    binary,
    base >=4.7
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      binary,
      base >=4.7,
      hspec >=2.2.3,
      htcpcp
  default-language:    Haskell2010
